bike-prediction/templates/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: bike-prediction-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1


spec:
  ingressClassName: nginx
  rules:
    - host: t8.se4ai.sws.informatik.uni-leipzig.de
      http:
        paths:
          - path: /fastapi/?(.*)
            pathType: Prefix
            backend:
              service:
                name: fastapi-service
                port:
                  number: 80
          - path: /grafana/?(.*)
            pathType: Prefix
            backend:
              service:
                name: bike-prediction-grafana
                port:
                  number: 80
          - path: /?(.*)
            pathType: Prefix
            backend:
              service:
                name: bike-prediction-frontend-service
                port:
                  number: 80
  tls:
    - hosts:
      - t8.se4ai.sws.informatik.uni-leipzig.de
      secretName: t8.se4ai.sws.informatik.uni-leipzig.de-tls
